--- a/diet.1
+++ b/diet.1
@@ -4,11 +4,11 @@
 diet \- mangle gcc command line arguments
 .SH SYNOPSIS
 .PP
-.B diet
+.B diet [-Os]
 [\fInormal gcc command line\fP]
 .SH DESCRIPTION
 .PP
-Diet is a small wrapper around gcc.  It will try to look at the command
+diet is a small wrapper around gcc.  It will try to look at the command
 line you specify and try to mangle it so that gcc will compile against
 the diet libc header files and link against the diet libc itself.
 
@@ -16,5 +16,9 @@ diet tries to be smart for cross compiling.  If the first argument is
 not gcc but sparc-linux-gcc, diet will guess that you want to cross
 compile for sparc and use bin-sparc/dietlibc.a instead of the dietlibc.a
 for your default architecture.
+
+When passed the -Os option before the gcc argument, diet will mangle the
+gcc options to include the best known for-size optimization settings for
+the platform.
 .SH AUTHOR
 Felix von Leitner <felix-dietlibc@fefe.de>
