--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@
   add -Os option to diet (see diet.1).
   several IPv6 constants and HZ were missing, thanks Johannes Kloos.
   add 32-bit uid/gid syscalls.
+  add rand48 (thanks, Johannes Kloos)
 
 0.11:
   fix major oops in DNS routines (only with WANT_FULL_RESOLV_CONF enabled).
