--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,7 @@
   several IPv6 constants and HZ were missing, thanks Johannes Kloos.
   add 32-bit uid/gid syscalls.
   add rand48 (thanks, Johannes Kloos)
+  fixed a lot of bugs in getopt* (thanks, Johannes)
 
 0.11:
   fix major oops in DNS routines (only with WANT_FULL_RESOLV_CONF enabled).
