--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,9 @@
   add 32-bit uid/gid syscalls.
   add rand48 (thanks, Johannes Kloos)
   fixed a lot of bugs in getopt* (thanks, Johannes)
+  add strxfrm and tweak limits.h.  glib-1.3.8 now compiles without changes.
+  add a few more module syscalls.  modutils-2.4.9 now compiles without changes.
+  fix gethostent alias list termination.  Major oops.
 
 0.11:
   fix major oops in DNS routines (only with WANT_FULL_RESOLV_CONF enabled).
