--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,7 @@
   add strxfrm and tweak limits.h.  glib-1.3.8 now compiles without changes.
   add a few more module syscalls.  modutils-2.4.9 now compiles without changes.
   fix gethostent alias list termination.  Major oops.
+  add execle and two DNS constants (from Johannes Kloos).
 
 0.11:
   fix major oops in DNS routines (only with WANT_FULL_RESOLV_CONF enabled).
