--- a/TODO
+++ b/TODO
@@ -15,3 +15,5 @@ EINTR handling (*puke*).  What about EAGAIN?
 bizarre printf bullshit: "%8.7lx",0xfefe should yield " 000fefe"?!
 
 fix %f and %g in printf.  They are more or less completely b0rken.
+
+make hostent packing use 4-byte alignment!
