--- a/TODO
+++ b/TODO
@@ -16,4 +16,4 @@ bizarre printf bullshit: "%8.7lx",0xfefe should yield " 000fefe"?!
 
 fix %f and %g in printf.  They are more or less completely b0rken.
 
-make hostent packing use 4-byte alignment!
+Look at alignment in DNS routines.
