--- a/TODO
+++ b/TODO
@@ -17,3 +17,5 @@ bizarre printf bullshit: "%8.7lx",0xfefe should yield " 000fefe"?!
 fix %f and %g in printf.  They are more or less completely b0rken.
 
 Look at alignment in DNS routines.
+
+select on arm is broken?
