--- a/CHANGES
+++ b/CHANGES
@@ -28,6 +28,7 @@
     glibc, the linker will barf.  This will bloat your object files, but
     you can remove all the references with "strip -R .note" from
     the binaries in the end (which you should do anyway).
+  fix ARM unified syscall (select did not work).
 
 0.11:
   fix major oops in DNS routines (only with WANT_FULL_RESOLV_CONF enabled).
