--- a/README
+++ b/README
@@ -49,6 +49,4 @@ example gzip, bzip2 and fdisk.
 
 
 The license for the diet libc is the GNU General Public License, version
-2 (as included in the file COPYING).  The glob() and entlib sources were
-contributed and are licensed under the GNU Lesser General Public
-License, as available on http://www.gnu.org/copyleft/lesser.html.
+2 (as included in the file COPYING).
