--- a/CHANGES
+++ b/CHANGES
@@ -33,6 +33,7 @@
   do the same for getgrent and getspent
   remove entlib (new code is smaller)
   rewrite getserv* to use parselib (and provide ..._r, too)
+  add getpwnam_r and getpwuid_r
 
 0.11:
   fix major oops in DNS routines (only with WANT_FULL_RESOLV_CONF enabled).
