--- a/CHANGES
+++ b/CHANGES
@@ -35,6 +35,9 @@
   rewrite getserv* to use parselib (and provide ..._r, too)
   add getpwnam_r and getpwuid_r
   rewrite getproto* to use parselib (and protive ..._r, too)
+  Olaf muddled with the dynamic linker.  It's a clean-room
+    implementation in the sense that it once worked for Olaf in a clean
+    room ;)
 
 0.11:
   fix major oops in DNS routines (only with WANT_FULL_RESOLV_CONF enabled).
