--- a/CHANGES
+++ b/CHANGES
@@ -41,6 +41,8 @@
   add if_nameindex and if_freenameindex.
   fixed arm unified syscalls to work with current binutils (; is no
     longer a line separator but starts a comment, switched to .macro)
+  changed all st_[cma]time types to signed long so comparisons against
+    LONG_MIN will work correctly.  (GNU tar does this)
 
 0.11:
   fix major oops in DNS routines (only with WANT_FULL_RESOLV_CONF enabled).
