--- a/CHANGES
+++ b/CHANGES
@@ -46,6 +46,7 @@
   fixed two bugs regarding ungetc.
   add getusershell, setusershell, endusershell (for vs_ftpd)
   add prctl, dirfd (also for vs_ftpd)
+  fixed strftime (was completely hosed)
 
 0.11:
   fix major oops in DNS routines (only with WANT_FULL_RESOLV_CONF enabled).
