--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 0.13:
   add readdir64 and automatic mapping if _FILE_OFFSET_BITS == 64
+  make diet not include the linker safeguard stuff when preprocessing.
 
 0.12:
   more contributions from Frank Klemm.
