--- a/TODO
+++ b/TODO
@@ -17,3 +17,5 @@ bizarre printf bullshit: "%8.7lx",0xfefe should yield " 000fefe"?!
 fix %f and %g in printf.  They are more or less completely b0rken.
 
 gethost/netent -> parselib
+
+s390: shouldn't we zero the frame pointer for gdb?
