--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,7 @@
   fixed fflush on input streams (tic from ncurses exposed this)
   duh, there is an alarm system call, too, so we use it and not setitimer
   fix comparison in gmtime_r that caused Jan 1 to be converted to Dec 32.
+  rewrote __dtostr (it also has one more argument now)
 
 0.12:
   more contributions from Frank Klemm.
