--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,7 @@
   duh, there is an alarm system call, too, so we use it and not setitimer
   fix comparison in gmtime_r that caused Jan 1 to be converted to Dec 32.
   rewrote __dtostr (it also has one more argument now)
+  make putenv behave like glibc (putenv("HOME") == unsetenv("HOME"))
 
 0.12:
   more contributions from Frank Klemm.
