fix strncat for n == 0 (security implications!) bsearch did not find the last element in the array

--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,9 @@
   fix comparison in gmtime_r that caused Jan 1 to be converted to Dec 32.
   rewrote __dtostr (it also has one more argument now)
   make putenv behave like glibc (putenv("HOME") == unsetenv("HOME"))
+  fix strncat for the case where n == 0 (security implications?)
+  fix bsearch (it didn't find the very last element in the array, same
+    bug in both the C and the i386 assembly version).
 
 0.12:
   more contributions from Frank Klemm.
