make utent work read-only. update FAQ.

--- a/CHANGES
+++ b/CHANGES
@@ -18,6 +18,7 @@
   fix brk (the syscall was documented incorrectly in the Linux man page)
     Thanks, Thomas Ogrisegg!
   added negated character classes to fnmatch (not required by POSIX)
+  make the utmp routines open utmp read-only if read-write doesn't work.
 
 0.12:
   more contributions from Frank Klemm.
