clean up TODO a little

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
 0.13:
   add readdir64 and automatic mapping if _FILE_OFFSET_BITS == 64
   make diet not include the linker safeguard stuff when preprocessing
-  Olaf: port to s/390!
+  Olaf: port to S/390!
   me: fix vfork (it was put into dietlibc.a twice)
   res_query did not initialize last
   diet (not diet-dyn, of course) now adds -static to the gcc command line
