--- a/TODO
+++ b/TODO
@@ -23,3 +23,5 @@ fix %g in printf.  They are more or less completely b0rken.
 
 qmail-queue dumps core since we added vfork.  Editing fork.h to #define
   vfork to fork works.  What happens here?
+
+gettext
