DNS should use TCP if TC bit is set

--- a/TODO
+++ b/TODO
@@ -24,4 +24,4 @@ fix %g in printf.  They are more or less completely b0rken.
 qmail-queue dumps core since we added vfork.  Editing fork.h to #define
   vfork to fork works.  What happens here?
 
-gettext
+use TCP if buf[2]&2 is non-zero in DNS answers.
