--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,8 @@
     value anyway.
   Put movl instead of popl rationale in comment in i386/unified.S since
     three people have suggested saving a few bytes with popl now ;)
+  I discovered __attribute__((malloc)) and started using it.  For gcc 3,
+    it improves the optimizer when functions return malloced pointers.
 
 0.13:
   add readdir64 and automatic mapping if _FILE_OFFSET_BITS == 64
