shave off a few bytes from parselib by removing the exit code from __prepare_parse, which was not used anyway because you could see whether it worked by looking at the struct state afterwards.  Uwe Ohse noticed this. Also, fix asprintf, which relied on vsnprintf to not write anything when passed a NULL pointer.  This was no longer the case after Olaf redid the printf engine.

--- a/CHANGES
+++ b/CHANGES
@@ -26,6 +26,9 @@
     libpthread to respect the parisc UPgrowing stack. still non functional,
     because the unified syscall uses errno :(
   tcgetospeed read from the wrong termios field.  Thanks, Gunnar Ritter!
+  Fixed asprintf (relied on vsnprintf(NULL,...) to return length but
+    don't write anything which was no longer the case.  It also
+    allocated one byte unnecessarily, which Uwe Ohse found.
 
 0.13:
   add readdir64 and automatic mapping if _FILE_OFFSET_BITS == 64
