--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 0.15:
+  vfork sucks.  I reverted to the old behavior where vfork==fork.
+  fix bsearch.
 
 0.14:
   fix brk again (missing __brk, trivial oversight)
