--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 0.15:
   vfork sucks.  I reverted to the old behavior where vfork==fork.
   fix bsearch (and remove i386 assembly bsearch, needs to be redone).
+  Thanks Ogrisegg sent a patch to make the PA-RISC unified syscall
+    thread-safe!
 
 0.14:
   fix brk again (missing __brk, trivial oversight)
