fix vsnprintf zero termination

--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,7 @@
   Fix gethostbyname to match host names case insensitively in /etc/hosts.
     Oops, this was reported 6 weeks ago but I overlooked the email.
     Thanks, Denis Rachal!
+  vsnprintf's zero termination was broken.
 
 0.14:
   fix brk again (missing __brk, trivial oversight)
