check in new MD5 ARM assembler version and make strncpy compile again (oops)

--- a/CHANGES
+++ b/CHANGES
@@ -33,6 +33,7 @@
     add <asm/sigcontext.h> for profiling support.
     make strncpy a #define in string.h to save a few bytes.
   add a getenv test suite entry.
+  Andre contributed an ARM assembler md5 implementation.
 
 0.14:
   fix brk again (missing __brk, trivial oversight)
